# npm2rez

./: .gitignore  CHANGELOG.md  README.md  README_zh.md  TODO.md  noxfile.py  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: codecov.yml  mr-test.yml  python-publish.yml
nox_actions/: codetest.py  lint.py  release.py  utils.py
npm2rez/: __init__.py  core.py
src/npm2rez/: __init__.py  __main__.py  cli.py  core.py
tests/: test_cli_commands.py  test_core_api.py  test_integration.py  test_npm2rez.py
